CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "Building Water Surface")
Project(WaterSurface CXX)

SET(WATER_SURFACE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Water Surface src dir: ${WATER_SURFACE_SRC_DIR}")
SET(WATER_SURFACE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Water Surface bin dir: ${WATER_SURFACE_BIN_DIR}")
SET(WATER_SURFACE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(CMAKE_AUTOMOC TRUE)

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_EXECUTABLE(WaterSurface ${WATER_SURFACE_SRC_FILES})
TARGET_LINK_LIBRARIES(WaterSurface ${WATER_SURFACE_LIBRARIES})
INCLUDE_DIRECTORIES(${WATER_SURFACE_INCLUDE_DIRS})
